# InterSect

./: CMakeLists.txt  Ellipsoid.cpp  Ellipsoid.h  Point.cpp  Point.h  config.txt  main.cpp
Evaluations/: Calculations.cpp  Equation.cpp  Equation.h  EquationSystem.cpp  EquationSystem.h  Matrix.cpp  Matrix.h
InterSect/: InterSect.cpp  InterSect.h
Primary/: Point.h
SurfaceEquations/: QuadricEquation.cpp  QuadricEquation.h  SurfaceEquation.cpp  SurfaceEquation.h
Surfaces/: AbstractSurface.cpp  AbstractSurface.h  Ellipsoid.cpp  Ellipsoid.h  EmptySurface.cpp  EmptySurface.h  HyperboloidOneSheet.cpp  HyperboloidOneSheet.h  HyperboloidTwoSheet.cpp  HyperboloidTwoSheet.h  Paraboloid.cpp  Paraboloid.h  ParaboloidElliptic.cpp  ParaboloidElliptic.h  ParaboloidHyperbolic.cpp  ParaboloidHyperbolic.h  SurfaceEquation.cpp  SurfaceEquation.h
